<resources>
    <string name="app_name">App Gaseta</string>
    <string name="txt_hint_edit_posto">Posto</string>
    <string name="txt_hint_edit_Gasolina">Gasolina</string>
    <string name="txt_hint_edit_Etanol">Etanol</string>
    <string name="txt_hint_edit_Litros">Litros</string>
    <string name="txt_button_limpar">LIMPAR</string>
    <string name="txt_button_salvar">SALVAR</string>
    <string name="txt_button_finalizar">FINALIZAR</string>


</resources>