<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:text="APP Gaseta"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"
                />

            <TextView
                android:id="@+id/id_combustivel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="50dp"
                android:text="Gasolina X Etanol"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_horizontal"/>

            <EditText
                android:id="@+id/id_posto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_posto"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                android:id="@+id/id_gasolina"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_Gasolina"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />



            <EditText
                android:id="@+id/id_etanol"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_Etanol"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <EditText
                android:id="@+id/id_litros"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_Litros"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/btn_calcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/teal_200"
                android:text="Calcular"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"/>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="22dp"
                android:text="Valor Total a Pagar"
                android:textAlignment="center"
                android:textSize="20sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_limpar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/txt_button_limpar" />

                <Button
                    android:id="@+id/btn_salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="50dp"
                    android:backgroundTint="@color/teal_200"
                    android:text="Salvar" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/btn_finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="228dp"
                android:text="Finalizar"
                android:backgroundTint="@color/teal_200"/>




        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
