<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="20dp"
                android:text="APP LISTA DE ALUNOS"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/id_nome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_posto"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/id_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_Gasolina"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                />

            <!-- Botão "Limpar" à esquerda -->

            <!-- Botão "Salvar" à direita -->

            <!-- Botão "Finalizar" -->

            <EditText
                android:id="@+id/id_matricula"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="Matricula"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/id_cpf"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/txt_hint_edit_Litros"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="115dp"
                android:layout_marginEnd="22dp"
                android:background="@color/teal_200"
                android:text="Lista Curso"
                android:textAlignment="center"
                android:textSize="20sp"
                />
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="72dp"
                tools:ignore="SpeakableTextPresentCheck"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Button
                android:id="@+id/btn_limpar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txt_button_limpar"
                android:backgroundTint="@color/teal_200"
                />

                <Button
                android:id="@+id/btn_salvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="Salvar"
                    android:backgroundTint="@color/teal_200"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <Button
                android:id="@+id/btn_finalizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="228dp"
                android:text="Finalizar"
                android:backgroundTint="@color/teal_200"/>





        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>
